--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header>
   <div class="menu">
     <ul>
-      <li style="float: left !important;"><a href="/">meatbag.xyz</a></li>
+      <li class="special"><a href="/">meatbag.xyz</a></li>
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- if my_page.title -%}
