--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -40,7 +40,7 @@ footer { margin-bottom: 20px; }
 /**
  * Lists
  */
-:not(.menu) > ul { list-style: none;  padding-left: 0; }
+:not(.menu) > ul { list-style: none;  padding-left: 0; margin-bottom:15px !important; }
 :not(.menu) > ul { list-style-type: none; }
 :not(.menu) > ul > li:before { content: "-";  margin-right: 9px; }
 
