--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,3 +14,19 @@ layout: default
     {%- endfor -%}
   </ul>
 {%- endif -%}
+<script type="text/javascript">
+    $(document).ready(function() {
+        $.getJSON("https://ws.audioscrobbler.com/2.0/?method=user.getrecenttracks&user=fyebrazy&api_key=a870db12ebf365062fd7d6386292bf76&format=json", function(data) {
+            var html = '';
+            var counter = 1;
+            $.each(data.recenttracks.track, function(i, item) {
+                if(counter == 1) {
+                    html += 'Currently listening to: <span><a href="' + item.url + '" target="_blank">' + item.name + '</a> - ' + item.artist['#text'] + '</span>';
+                }
+                counter++
+            });
+            $('.listening-to').append(html);
+        });
+    });
+</script>
+<div class="listening-to"></div>
