--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@ layout: default
             var counter = 1;
             $.each(data.recenttracks.track, function(i, item) {
                 if(counter == 1) {
-                    html += 'Currently listening to: <span><a href="' + item.url + '" target="_blank">' + item.name + '</a> - ' + item.artist['#text'] + '</span>';
+                    html += '<span><a href="' + item.url + '" target="_blank">' + item.name + ' - ' + item.artist['#text'] + '</a></span>';
                 }
                 counter++
             });
@@ -29,4 +29,4 @@ layout: default
         });
     });
 </script>
-<div class="listening-to"></div>
+<div class="listening-to">Currently listening to: </div>
