--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,4 +29,4 @@ layout: default
         });
     });
 </script>
-<div class="listening-to">Currently listening to: <br><span style="white-space: nowrap"><a href="https://www.last.fm/music/Young+Thug/_/Check" target="_blank">Check - Young Thug</a></span></div>
+<div class="listening-to">Currently listening to: <span style="white-space: nowrap"><a href="https://www.last.fm/music/Young+Thug/_/Check" target="_blank">Check - Young Thug</a></span></div>
